--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body{
 .selected{
     color: black;
     background-color: white;
-    padding-top: 25px;
+    padding-top: 15px;
     height: 50px;
     font-family: 'Jua', sans-serif;
     text-align: center;
@@ -57,6 +57,8 @@ body{
     grid-template-columns: 2fr 1fr;
     border: 5px black solid;
     border-radius: 8px;
+    margin: 15%;
+    margin-top: 0;
     margin-bottom: 5%;
 }
 .contText{
@@ -64,9 +66,7 @@ body{
 }
 .contImg{
     border-right: 3px black dashed;
-    padding-left: 5%;
-    padding-right: 5%;
-    width: 80%;
+    width: 100%;
 }
 #howTo{
     border: none;
@@ -78,12 +78,14 @@ body{
     }
     .navButton, .selected{
         height: 30px;
-        padding-top: 15px;
+        padding-top: 5px;
     }
     .contDiv{
         display: block;
         border: 5px black solid;
         border-radius: 8px;
+        margin: 0;
+        margin-bottom: 5%;
     }
     .contImg{
         margin: 0;
