--- a/index.css
+++ b/index.css
@@ -98,7 +98,7 @@ body{
         margin-bottom: 5%;
     }
     #mainContents{
-        min-height: ;
+        min-height: 20px;
     }
     .contImg{
         border-radius: 5px;
