--- a/index.css
+++ b/index.css
@@ -1,13 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
-#howTo{
-    background-color: orange;
-}
 .contentsModalLabel{
     color: white;
 }
 .school{
     width: 500px;
     height: 500px;
+    margin: 0;
 }
 a{
     text-decoration: none;
