--- a/halloween.css
+++ b/halloween.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 #bail{
     text-align: center;
-    font-size: 80%;
+    font-size: xx-large;
+    padding-top: 20%;
     position: absolute;
     width:100%;
     height:100%;
@@ -9,7 +10,6 @@
     left: 0;
     color:white;
     background-color: black;
-    opacity: 0.7;
     z-index: 2;
 }
 .halloween{
