--- a/index.css
+++ b/index.css
@@ -1,4 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+#ribbon{
+    position: absolute;
+    z-index: 3;
+    top: 30%;
+    left: 45%;
+    width: 10%;
+    /* min-width: 40px; */
+}
+#bail{
+    text-align: center;
+    font-size: xx-large;
+    padding-top: 20%;
+    position: absolute;
+    width:100%;
+    height:100%;
+    top: 0;
+    left: 0;
+    color:black;
+    background-color: white;
+    z-index: 2;
+}
+.ha
 .contentsModalLabel{
     color: white;
 }
