--- a/index.css
+++ b/index.css
@@ -3,14 +3,13 @@
     position: absolute;
     z-index: 3;
     top: 30%;
-    left: 45%;
-    width: 10%;
-    /* min-width: 40px; */
+    left: 42.5%;
+    width: 15%;
 }
 #bail{
     text-align: center;
     font-size: xx-large;
-    padding-top: 20%;
+    padding-top: 18%;
     position: absolute;
     width:100%;
     height:100%;
@@ -19,6 +18,7 @@
     color:black;
     background-color: white;
     z-index: 2;
+    opacity: 0.8;
 }
 .ha
 .contentsModalLabel{
